- Cambio struttura package - Aggiunto Materiale.kt per mostrare un materiale in vendita - Sistemato list_item_home.xml - Inizio passaggio a creazione di fragment con il metodo newIstance auto-creato da Kotlin

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment"
+    tools:context=".main.home.HomeFragment"
     android:background="?attr/colorPrimaryVariant"
     android:tag="home">
 
 
-    <ListView
+    <Button
+        android:id="@+id/btn_test_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/ListViewHome"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:text="@string/testtext"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/lv_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/btn_test_home"
         tools:listitem="@layout/list_item_home" />
 </androidx.constraintlayout.widget.ConstraintLayout>
