- Inizio implementazione Chat con classi per la memorizzazione dei dati e grafica corrispondente - Sistemazione classe studente per implementazione chat

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -12,5 +12,5 @@
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="55dp"
-        />
+        tools:listitem="@layout/list_item_chat"/>
 </LinearLayout>
