--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -1,58 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_item_listview"
-        >
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/shape_item_listview">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
         android:orientation="horizontal">
-
         <ImageView
-            android:id="@+id/iv_foto_materiale"
+            android:id="@+id/iv_foto_profilo"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/test" />
-
-
+            android:src="@drawable/test"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:orientation="vertical">
-
             <TextView
-                android:id="@+id/tv_nome_materiale"
+                android:id="@+id/tv_nome_studente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/name_of_material"
+                android:text="@string/name_of_student"
                 android:textColor="?attr/colorPrimary"
                 android:textSize="24sp"
-                android:textStyle="bold" />
-
+                android:textStyle="bold"/>
             <TextView
-                android:id="@+id/tv_nome_venditore"
+                android:id="@+id/tv_ultimo_messaggio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/name_of_vendor" />
-
+                android:text="@string/last_messagge"/>
         </LinearLayout>
-
     </LinearLayout>
-
     <TextView
-        android:id="@+id/tv_prezzo"
+        android:id="@+id/tv_data_messaggio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:padding="15dp"
-        android:text="@string/price" />
-
-    </RelativeLayout>
+        android:text="@string/date_last_messagge"/>
+</LinearLayout>
