--- a/app/src/main/res/layout/fragment_materiale.xml
+++ b/app/src/main/res/layout/fragment_materiale.xml
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_nome_venditore" />
 
         <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
+            android:id="@+id/mv_materiale"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginTop="48dp"
@@ -73,6 +73,6 @@
             android:text="@string/contact_me"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mapView" />
+            app:layout_constraintTop_toBottomOf="@id/mv_materiale" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
