--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,19 @@
 
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="1440dp"
         android:layout_gravity="top"
+
+        app:defaultNavHost="true"
         app:layout_anchor="@+id/bottomAppBar"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.0"
 
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/my_nav_main"
-        />
+        app:layout_constraintVertical_bias="0.0"
+        app:navGraph="@navigation/my_nav_main" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:layout_width="match_parent"
