Uso fragment_login.xml e fragment_register.xml al posto delle corrispondenti Activitys

--- a/app/src/main/res/layout/activity_nuovo_annuncio.xml
+++ b/app/src/main/res/layout/activity_nuovo_annuncio.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NuovoAnnuncioActivity">
+    tools:context=".main.NuovoAnnuncioActivity">
     <com.google.android.gms.maps.MapView
         android:id="@+id/mv_profile"
         android:layout_width="match_parent"
