--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,98 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".login.LoginActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="24dp"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <fragment
+        android:id="@+id/fr_login"
+        android:name="androidx.navigation.fragment.NavHostFragment"
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="158dp"
-            android:layout_height="134dp"
-            android:layout_marginTop="64dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/test" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
 
-        <EditText
-            android:id="@+id/et_email_login"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="40dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
 
-            android:drawableStart="@drawable/ic_email"
-            android:drawablePadding="8dp"
-            android:ems="10"
-
-            android:hint="@string/email_address"
-            android:inputType="textEmailAddress"
-
-            android:text="test"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageView" />
-
-        <EditText
-            android:id="@+id/et_password_login"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-
-            android:drawableStart="@drawable/ic_lock"
-            android:drawablePadding="8dp"
-            android:ems="10"
-
-            android:hint="@string/password"
-            android:inputType="textPassword"
-
-            android:text="admin"
-
-            app:layout_constraintEnd_toEndOf="@id/et_email_login"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/et_email_login"
-            app:layout_constraintTop_toBottomOf="@id/et_email_login" />
-
-        <Button
-            android:id="@+id/btn_Login"
-            style="@style/primaryStyleButton"
-            android:layout_width="0dp"
-
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="128dp"
-            android:text="@string/login"
-            app:layout_constraintEnd_toEndOf="@id/et_password_login"
-
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/et_password_login"
-            app:layout_constraintTop_toBottomOf="@+id/et_password_login" />
-
-        <Button
-            android:id="@+id/btn_SingIn"
-            style="@style/secondStyleButton"
-            android:layout_width="0dp"
-
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="24dp"
-            android:text="@string/sign_in"
-            app:layout_constraintEnd_toEndOf="@id/btn_Login"
-
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@id/btn_Login"
-            app:layout_constraintTop_toBottomOf="@+id/btn_Login" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/my_nav_login"
+        />
 </ScrollView>
