--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".login.LoginFragment"
     android:paddingBottom="24dp">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageView"
@@ -89,3 +92,4 @@
             app:layout_constraintStart_toStartOf="@id/btn_Login"
             app:layout_constraintTop_toBottomOf="@+id/btn_Login" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
