--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,7 +6,7 @@
     tools:context=".main.ChatFragment"
     android:tag="chat">
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ListViewSearch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
