configurato realtime database per chat e adapter per la sezione chat

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -7,7 +7,7 @@
     android:tag="chat">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ListViewSearch"
+        android:id="@+id/RecyclerViewChat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="16dp"
