--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -36,7 +36,7 @@
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
 
-            android:text="test"
+            android:text="1"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -56,7 +56,7 @@
             android:hint="@string/password"
             android:inputType="textPassword"
 
-            android:text="admin"
+            android:text="1"
 
             app:layout_constraintEnd_toEndOf="@id/et_email_login"
             app:layout_constraintHorizontal_bias="0.0"
