implementate le funzioni principali della chat

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="blueTrasparent">#14246BFD</color>
     <color name="gray">#F5F5F5</color>
     <color name="darkGray">#504a4c</color>
-    <color name="midGray">#a19a94</color>
+    <color name="midGray">#E5E5EA</color>
 </resources>
