--- a/app/src/main/res/navigation/my_nav_main.xml
+++ b/app/src/main/res/navigation/my_nav_main.xml
@@ -22,7 +22,7 @@
     </fragment>
     <fragment
         android:id="@+id/chatFragment"
-        android:name="com.example.usedbooks.main.ChatFragment"
+        android:name="com.example.usedbooks.main.chat.ChatFragment"
         android:label="fragment_chat"
         tools:layout="@layout/fragment_chat" />
     <fragment
