--- a/app/src/main/res/navigation/my_nav_main.xml
+++ b/app/src/main/res/navigation/my_nav_main.xml
@@ -24,7 +24,18 @@
         android:id="@+id/chatFragment"
         android:name="com.example.usedbooks.main.chat.ChatFragment"
         android:label="fragment_chat"
-        tools:layout="@layout/fragment_chat" />
+        tools:layout="@layout/fragment_chat" >
+        <action
+            android:id="@+id/action_chatFragment_to_textChat"
+            app:destination="@id/textChat" >
+            <argument
+                android:name="name_vendor"
+                app:argType="string"/>
+            <argument
+                android:name="id"
+                app:argType="string"/>
+        </action>
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.usedbooks.main.ProfileFragment"
@@ -44,4 +55,16 @@
             app:argType="com.example.usedbooks.dataClass.Materiale"
             />
     </fragment>
+    <activity
+        android:id="@+id/textChat"
+        android:name="com.example.usedbooks.main.chat.TextChat"
+        android:label="activity_text_chat"
+        tools:layout="@layout/activity_text_chat">
+        <argument
+            android:name="name_vendor"
+            app:argType="string"/>
+        <argument
+            android:name="id"
+            app:argType="string"/>
+    </activity>
 </navigation>
