--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -36,7 +36,7 @@
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
 
-            android:text="1"
+            android:text="1@1.com"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
