sistemazione visualizzazione immagine

--- a/app/src/main/res/layout/activity_nuovo_annuncio.xml
+++ b/app/src/main/res/layout/activity_nuovo_annuncio.xml
@@ -12,8 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         app:layout_constraintBottom_toTopOf="@+id/addImage"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </ImageView>
 
