Inizio implementazione login automatico

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".main.MainActivity">
 
     <fragment
-        android:id="@+id/fragmentContainerViewMainActivity"
+        android:id="@+id/fg_main"
         android:name="androidx.navigation.fragment.NavHostFragment"
 
 
