--- a/app/src/main/res/layout/activity_text_chat.xml
+++ b/app/src/main/res/layout/activity_text_chat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.chat.TextChat">
+    tools:context=".main.chat.SingleChat">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ll_topbar"
